# rustlab

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  learn-rust-roadmap.xmind  rust-hot-libraries.md  rust.xmind
.github/workflows/: ci.yml  coverage.yml  update_basic-exercises_readme.yml  update_example-projects_readme.yml  update_notes_readme.yml  update_readme.yml  update_third-party_readme.yml
ProgrammingRust-examples-src/mandelbrot/: Cargo.toml  README.md
apiserver/: Cargo.toml  build_to_linux.sh  config.toml  使用Rust开发完整的REST API应用.md
apiserver/src/: config.rs  dao.rs  db.rs  errors.rs  helpers.rs  main.rs  schema.rs  server.rs  urls.rs
apiserver/src/handlers/: index_handler.rs  user_handler.rs
apiserver/src/models/: mod.rs  user.rs
basic-exercises/: Cargo.toml  hello.txt
basic-exercises/src/: basic_type.rs  borrow_mut_base.rs  chaining_methods.rs  closure_base.rs  collection_types.rs  control_flow.rs  destructuring_base.rs  ecrate_regex.rs  enum_base.rs  error_base.rs  generic_base.rs  generic_bound.rs  generic_bound_where.rs  generic_impl.rs  iterators.rs  lifetime_base.rs  loops.rs  macros_base.rs  main.rs  std_binaryheap_base.rs  std_box_base.rs  std_error_base.rs  std_hashmap_base.rs  std_hashset_base.rs  std_misc_env_arg_base.rs  std_misc_ffi_base.rs  std_misc_io_fs_base.rs  std_misc_process_base.rs  std_misc_threads_base.rs  std_option_base.rs  std_result_base.rs  std_vecdeque_base.rs  struct_base.rs  trait_base.rs  trait_override_add_operator.rs
basics-exercises/: Cargo.toml
basics-exercises/src/: fn_base.rs  macros_base.rs  main.rs  std_vector_base.rs  trait_base.rs
create_lib_base/mylib/: Cargo.toml
create_lib_base/src/: main.rs
example-projects/apiserver/src/: dao.rs  db.rs  errors.rs  helpers.rs  schema.rs
example-projects/apiserver/src/handlers/: index_handler.rs  mod.rs
example-projects/apiserver/src/models/: mod.rs
example-projects/create_lib_base/: Cargo.toml
example-projects/dts-rust/: Cargo.toml  README.md  build.sh  config.toml  pulsar-producer.rs
example-projects/dts-rust/etc/: config.toml
example-projects/dts-rust/src/: config.rs  kafka.rs  kafka_consumer.rs  main.rs  timer_task.rs  utils.rs
example-projects/dts-rust/src/hippo/: config.rs  mod.rs
example-projects/dts-rust/src/hippo/sinks/: clickhouse.rs  console.rs  mod.rs  pulsar.rs
example-projects/dts-rust/src/hippo/sources/: kafka.rs  mod.rs
example-projects/hello-world-tokio/: Cargo.toml
example-projects/hello-world-tokio/src/: main.rs
example-projects/hippo/: Cargo.toml  README.md
example-projects/hippo/etc/: dev_config.toml  test_kafka_pulsar_config.toml
example-projects/hippo/src/: main.rs  timer_task.rs
example-projects/hippo/src/hippo/: mod.rs
example-projects/hippo/src/hippo/config/: mod.rs
example-projects/hippo/src/hippo/sinks/: clickhouse.rs  mod.rs  pulsar.rs  stdout.rs
example-projects/hippo/src/hippo/sources/: kafka.rs  mod.rs  stdin.rs
example-projects/mysql-actix-api/: Cargo.toml  config.toml  使用Rust开发完整的REST API应用.md
example-projects/mysql-actix-api/src/: dao.rs  errors.rs  helpers.rs  main.rs  schema.rs  urls.rs
example-projects/mysql-actix-api/src/handlers/: index_handler.rs  mod.rs  user_handler.rs
example-projects/mysql-actix-api/src/models/: user.rs
example-projects/rocksdb-kv-api/: Cargo.toml
example-projects/rocksdb-kv-api/src/: kv.rs  kv_handler.rs  main.rs
example-projects/rocksdb-rust-web/: Cargo.toml
example-projects/rocksdb-rust-web/src/: main.rs
example-projects/rusty-journal/: Cargo.toml  test-journal.json
example-projects/rusty-journal/src/: cli.rs  main.rs  tasks.rs
example-projects/trpl-webserver/: Cargo.toml  index.html
example-projects/trpl-webserver/mylib/src/: lib.rs
example-projects/trpl-webserver/src/: main.rs
handling-command-line-args/: Cargo.toml
handling-command-line-args/src/: main.rs
iron-gcd/: Cargo.toml
iron-gcd/complex/: Cargo.toml
iron-gcd/src/: main.rs
learn_async/: Cargo.toml
learn_async/src/: main.rs
learn_base/base_T/: Cargo.toml
learn_base/base_T/src/: main.rs
learn_base/base_closure/: Cargo.toml
learn_base/base_closure/src/: main.rs
learn_base/base_crate/: Cargo.toml
learn_base/base_enum/: Cargo.toml
learn_base/base_enum/src/: main.rs
learn_base/base_error/: Cargo.toml
learn_base/base_error/src/: main.rs
learn_base/base_fn/: Cargo.toml
learn_base/base_fn/src/: main.rs
learn_base/base_hashmap/: Cargo.toml
learn_base/base_hashmap/src/: main.rs
learn_base/base_option/: Cargo.toml
learn_base/base_option/src/: main.rs
learn_base/base_string/: Cargo.toml
learn_base/base_string/src/: main.rs
learn_base/base_struct/: Cargo.toml
learn_base/base_struct/src/: main.rs
learn_base/base_test/: Cargo.toml
learn_base/base_test/mylib/src/: animal.rs  lib.rs
learn_base/base_trait/: Cargo.toml
learn_base/base_trait/src/: main.rs
learn_base/base_vector/: Cargo.toml
learn_base/base_vector/src/: main.rs
learn_base/thread_safe/: Cargo.toml
mandelbrot/src/: main.rs
microservice-in-rust/: Cargo.toml  README.md
microservice-in-rust/src/: main.rs
notes/: 1.md  2.md  notes.list
rocksdb-rust-web/src/: kv.rs  kv_handler.rs
src/: basic_type.rs  borrow_base.rs  closure_base.rs  collection_vector.rs  define_error_type.rs  error_base.rs  generic_bound_where.rs  generic_impl.rs  hashmap_base.rs  lifetime_base.rs  main  main.rs  option_base.rs  std_box_base.rs  std_hashmap_base.rs  std_hashset_base.rs  std_misc_channels_base.rs  std_misc_env_arg_base.rs  std_misc_io_fs_base.rs  std_misc_path_file_base.rs  std_misc_process_base.rs  std_misc_threads_base.rs  std_result_base.rs  std_string_base.rs  string_base.rs  struct_base.rs  trait_base.rs  trait_test.rs
webserver/: Cargo.toml
webserver/mylib/src/: lib.rs
