[package]
name = "rustlab"
description = "A short description of my package"
version = "0.1.0"
authors = ["zhouhai <yew1eb@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "basic-exercises",
  "example-projects/trpl-webserver",
  "example-projects/mysql-actix-api",
  "example-projects/rocksdb-kv-api",
]

[dependencies]
