[package]
name = "apiserver"
version = "0.1.0"
authors = ["zhouhai <yew1eb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.8"
toml = "0.5.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix = "0.10"
actix-web = "3.1.0"

# database
diesel = { version = "1.3.2", optional = true, features = ["r2d2", "postgres"] }
r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = "0.21"