[package]
name = "dts-rust"
version = "0.1.0"
authors = ["zhouxiaoshuai <zhouxiaoshuai@huya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = {version = "0.24", features = ["cmake-build"] }
futures = "0.3"
pulsar = "1.0"
tokio = "0.2"