[package]
name = "dts-rust"
version = "0.1.0"
authors = ["yew1eb <yew1eb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
# tokio runtime and utilities
tokio = { version = "0.2.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3.1"
bytes = "0.5.4"

# communication with kafka
rdkafka = {version = "0.24", features = ["cmake-build"] }

# pulsar
pulsar = "1.0"

# for downloading images
reqwest = { version = "0.10", features = ["json"] }

# image processing
image = "0.22.4"

# allows for uploading stuff to s3
rust-s3 = "0.18.11"

# what could this be for...
log = "0.4.8"
env_logger = "0.8.1"

# config from parameters/env
structopt = "0.3"
toml = "0.5.7"


# Serialization/Deserialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"



