[package]
name = "rocksdb-kv-api"
version = "0.1.0"
authors = ["zhouhai <yew1eb@gmail.com>"]
edition = "2018"
# This is a minimal working setup of Actix-web with RocksDB being used as a KV store or cache.



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
bytes = "0.5.6"
env_logger = "0.7.1"
json = "0.12"
rocksdb = "0.16.0"


