[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["zhouhai <yew1eb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
structopt = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1"